2007-03-23  Philip Van Hoof  <pvanhoof@gnome.org>

	* Support for X-Priority and X-MSMail-Priority

2007-03-20  Philip Van Hoof  <pvanhoof@gnome.org>

	* Although this needs a lot testing, potential fix for ticket #30

2007-03-19  Philip Van Hoof  <pvanhoof@gnome.org>

	* camel-lite: added some additional locking to narrow down 
	Ticket #27's problem

2007-03-17  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-test: fixed a compilation error and a compilation
	warning in two unit tests

2007-03-16  Dirk-Jan C. Binnema  <dirk-jan.binnema@nokia.com>
	
	* changed license to LGPL for some files which were mistakenly marked
	GPL

2007-03-16  Philip Van Hoof  <pvanhoof@gnome.org>

	* Design by contract assertions
	* tny_account_store_find_account API added
	* tny_folder_find_msg API added

	* This was a major API change

2007-03-16  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymailui/tny-msg-view.c: fixed a typo in a function name
	* libtinymail/tny-folder.c: fixed a DBC assertion

2007-03-15  Philip Van Hoof  <pvanhoof@gnome.org>

	* Design by contract assertions

2007-03-15  Sergio Villar Senin  <svillar@igalia.com>

	* tests/funtional: added a functional test to transfer folders
	* libtinymail-camel/tny-camel-session.c: removed the first_switch
	attribute of TnySessionCamel
	* libtinymailui-gtk/tny-gtk-folder-store-tree-model.c: the deleter
	method now returns just after deleting a row
	* libtinymail-camel/tny-camel-folder.c: 
	Added some error management code when loading folders
	Added notification code to tny_camel_folder_copy_folder

2007-03-14  Juerg Billeter <j@bitron.ch>

	* libtinymail/tny-mime-part.c: Design by contract assertions

2007-03-14  Philip Van Hoof  <pvanhoof@gnome.org>

	* tny_folder_store_remove now specifies and its implementation will
	unsubscribe all the observers of the folder being removed.
	* Design by contract assertions

	* This was a major API change

2007-03-14  Sergio Villar Senin  <svillar@igalia.com>
